Started modalchange + fixed floorshift
title

--- a/src/styles/gulvvarme/unit.css
+++ b/src/styles/gulvvarme/unit.css
@@ -50,7 +50,8 @@
 }
 .unitListDiv-overskrift-tekst{
     float:left;
-    margin-left: auto;
+    margin-left: 5px;
+    margin-right: auto;
     align-self: center;
 }
 
@@ -68,12 +69,13 @@
 
 .unitListDiv-overskrift-knapp{
     float:left;
-    margin-left: auto;
-    margin-right: 5px;
+    margin-right: 2px;
     align-self: center;
     border-style: solid;
     border-width: 1px;
     border-color: darkgrey;
+    height: 34px;
+
 }
 
 .unitListDiv-overskrift-knapp:hover{
@@ -86,76 +88,42 @@
 
 
 .delete-btn {
-    display: none;
-    background: none;
-    border: none;
+  display: none;
+  background: none;
+  border: none;
+  opacity: 0.8;
+}
+
+.delete-btn:hover{
+  opacity: 1;
 }
 
 .unit-list-item:hover > .delete-btn {
-    display: block;
+    display: flex;
+    align-items: flex-end;
 }
 
-.trash-icon {
-    cursor: pointer;
+.unit-list-item:hover{
+  border-top: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
 }
 
- .gg-trash {
-    box-sizing: border-box;
-    position: relative;
-    display: block;
-    transform: scale(var(--ggs,1));
-    width: 10px;
-    height: 12px;
-    border: 2px solid transparent;
-    box-shadow:
-        0 0 0 2px,
-        inset -2px 0 0,
-        inset 2px 0 0;
-    border-bottom-left-radius: 1px;
-    border-bottom-right-radius: 1px;
-    margin-top: 4px;
-    margin-right: 10px;
-}
-
-.gg-trash::after,
-.gg-trash::before {
-    content: "";
-    display: block;
-    box-sizing: border-box;
-    position: absolute
-}
-
-.gg-trash::after {
-    background: currentColor;
-    border-radius: 3px;
-    width: 16px;
-    height: 2px;
-    top: -4px;
-    left: -5px
-}
-
-.gg-trash::before {
-    width: 10px;
-    height: 4px;
-    border: 2px solid;
-    border-bottom: transparent;
-    border-top-left-radius: 2px;
-    border-top-right-radius: 2px;
-    top: -7px;
-    left: -2px
-}
 
 .unit-list-item {
   overflow: hidden;
   width: 100%;
   cursor: pointer;
   display: flex;
-  justify-content: space-between;
+
   align-items: center;
   padding-left: 5px;
   font-size: 14px;
   font-weight: normal;
   height: 40px;
+}
+
+.unit-list-item-name{
+  margin-right: auto;
 }
 
 .selected-unit-list-item{
@@ -171,9 +139,6 @@
     border: none;
 }
 
-.unit-list-item:hover .unit-list-item--delete {
-    display: block;
-}
 
 .unitListDiv-liste{
   height: 460px;
